# fsman

./: CMakeLists.txt  README.md
inc/: FsManGui.h
res/: fsman_resource.h
src/: FsManGui.cpp  maingui.cpp
